Landing page changes

--- a/SampleProductManagementApp/Pages/Index.cshtml
+++ b/SampleProductManagementApp/Pages/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<div>
     <h1 class="display-4">Welcome</h1>
-    <p>You can test <a href="/ProductPages">with Razor Views</a> or test <a href="~/product.html">Rest APIs</a>.</p>
+    <p>In this sample app, you can manage products in 2 ways:</p>
+    <ul class="list-group">
+        <li class="list-group-item"><a href="/ProductPages">Razor Views</a></li>
+        <li class="list-group-item"><a href="~/product.html">Rest APIs</a></li>
+    </ul>
 </div>
